<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.michibaum</groupId>
    <artifactId>microservice</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>microservice</name>

    <properties>
        <!-- https://spring.io/projects#release-calendar -->
        
        <!--
        https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies
        https://github.com/spring-projects/spring-boot/wiki
        -->
        <spring-boot.version>3.5.0</spring-boot.version>

        <!--
        https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies
        https://github.com/spring-cloud/spring-cloud-release/wiki/Supported-Versions#supported-releases
        -->
        <spring-cloud.version>2025.0.0</spring-cloud.version>

        <!--
        https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-server
        https://github.com/codecentric/spring-boot-admin/
        -->
        <spring-boot-admin.version>3.5.0</spring-boot-admin.version>

        <!-- https://mvnrepository.com/artifact/net.ttddyy.observation/datasource-micrometer-spring-boot -->
        <!-- https://github.com/jdbc-observations/datasource-micrometer -->
        <datasource-micrometer-spring-boot.version>1.1.1</datasource-micrometer-spring-boot.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!--
        https://stackoverflow.com/a/77179226/10258204
        https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
        -->
        <kotlin.version>2.1.21</kotlin.version>
        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>

        <!--
        https://mockk.io/
        https://mvnrepository.com/artifact/io.mockk/mockk-jvm
        -->
        <mockk.version>1.14.2</mockk.version>

        <!-- Docker Hub -->
        <dockerHub.url>https://registry.hub.docker.com</dockerHub.url>
        <jib-maven-plugin.image>eclipse-temurin:24-jre-alpine</jib-maven-plugin.image>
        
        <!-- Plugins -->
        <jib-maven-plugin.version>3.4.5</jib-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>

        <!-- Dependency override due to security risks -->
        <xstream.version>1.4.21</xstream.version>
        <httpclient.version>4.5.13</httpclient.version>
        <commons-compress.version>1.26.0</commons-compress.version>
    </properties>

    <dependencies>

        <!-- Kotlin -->
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>${xstream.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-dependencies</artifactId>
                <version>${spring-boot-admin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-bom</artifactId>
                <version>${kotlin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>repository.spring.release</id>
            <name>Spring GA Repository</name>
            <url>https://repo.spring.io/release</url>
        </repository>
        <repository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>

    <modules>
        <module>permission-library</module>
        <module>usermanagement-library</module>
        <module>authentication-library</module>
        <module>spring-boot-starter-authentication</module>
        <module>spring-boot-starter-discord</module>
        <module>gateway-service</module>
        <module>admin-service</module>
        <module>registry-service</module>
        <module>authentication-service</module>
        <module>usermanagement-service</module>
        <module>website-service</module>
        <module>chess-service</module>
        <module>fitness-service</module>
        <module>music-service</module>
    </modules>

    <profiles>
        <profile>
            <id>sonar-report</id>
            <properties>
                <sonar.organization>michibaum</sonar.organization>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
                <sonar.language>kotlin</sonar.language>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                @{argLine} --illegal-access=permit
                            </argLine>
                            <testSourceDirectory>
                                ${project.basedir}/src/test/kotlin
                            </testSourceDirectory>
                            <includes>
                                <include>**/*UT.java</include>
                                <include>**/*UT.kt</include>
                                <include>**/*UT.class</include>
                            </includes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <argLine>
                                @{argLine} --illegal-access=permit
                            </argLine>
                            <testSourceDirectory>
                                ${project.basedir}/src/test/kotlin
                            </testSourceDirectory>
                            <includes>
                                <include>**/*IT.java</include>
                                <include>**/*IT.kt</include>
                                <include>**/*IT.class</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>${kotlin.compiler.jvmTarget}</jvmTarget>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                        <plugin>jpa</plugin>
                    </compilerPlugins>
                    <sourceDirs>
                        <source>src/main/kotlin</source>
                    </sourceDirs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-noarg</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>

		</plugins>
    </build>

</project>
